# test-app

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
src/test/service/: config.py  error.py  main.py  middleware.py  singleton_aiohttp.py
