[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Adrian Gajan <adrian.gajan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
docker = "^4.2.0"
pytest = "^5.4.1"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"